working on feedback points

--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.0.4"
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
+    "typescript": "~5.0.4",
+    "webpack": "^5.88.2"
   }
 }
